# bazel-python-demo

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  README.md  WORKSPACE  demo.py  numpy-test.py  py3.sh  requirements.bzl  requirements.in  requirements.txt
tool_bazel/: BUILD.bazel
