load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//container:image.bzl")
load("@pip_deps//:requirements.bzl", "requirement")



py_binary(
    name = "demo",
    srcs = ["demo.py"],
    python_version = "PY3",
    deps = [
        requirement("dbt"),
        requirement("psycopg2-binary"),
    ],
)

exports_files(["requirements.txt"])

py3_image(
    name = "dbt",
    srcs = ["demo.py"],
    main = "demo.py",
    deps = [
        requirement("dbt"),
        requirement("psycopg2-binary"),
    ],
)


# container_push(
#     name = "push",
#     format = "Docker",
#     image = ":container",
#     registry = "gcr.io",
#     repository = "example-service",
#     visibility = ["//visibility:public"],
# )
