load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@default_pip_deps//:requirements.bzl", "requirement")
load("@container_pip_deps//:requirements.bzl", container_requirement = "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "demo",
    srcs = ["demo.py"],
    python_version = "PY3",
    deps = [
        requirement("dbt"),
        requirement("psycopg2-binary"),
    ],
)

exports_files(["requirements.txt"])

py3_image(
    name = "dbt",
    srcs = ["demo.py"],
    main = "demo.py",
    deps = [
        container_requirement("dbt"),
        container_requirement("psycopg2-binary"),
    ],
)


# container_push(
#     name = "push",
#     format = "Docker",
#     image = ":container",
#     registry = "gcr.io",
#     repository = "example-service",
#     visibility = ["//visibility:public"],
# )
